# CA_world_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: README.md  __init__.py  baselines.py  latent_discovery.py  latent_probes.py  latent_viz.py  plotting.py  run_all.py  sanity_checks.py  utils.py
analysis/outputs/: analysis_manifest.csv  latent_discovery_manifest.csv
configs/data/: life.yaml  rule110.yaml  rule184.yaml  rule184_mixedp_legacy_ft.yaml  rule184_mixedp_long.yaml  rule30.yaml  rule54.yaml
configs/experiment/: life_dense.yaml  rule110_best_long.yaml  rule110_ca_biased_small.yaml  rule110_ca_mid.yaml  rule110_dense.yaml  rule110_dense_balanced.yaml  rule110_dense_longcheck.yaml  rule110_dense_stability.yaml  rule110_dense_stable_balanced.yaml  rule110_focus_base_c010_cy005.yaml  rule110_focus_base_c010_cy010.yaml  rule110_focus_base_c020_cy005.yaml  rule110_focus_base_c020_cy010.yaml  rule110_focus_best_late32.yaml  rule110_focus_best_step075_late32.yaml  rule110_focus_c002_cy005.yaml  rule110_focus_c005_cy010.yaml  rule110_focus_c010_cy005.yaml  rule110_focus_c010_cy005_late32.yaml  rule110_focus_c010_cy010.yaml  rule110_focus_c010_cy010_late32.yaml  rule110_focus_c010_cy010_step075.yaml  rule110_focus_c010_cy010_step075_late32.yaml  rule110_focus_c020_cy020.yaml  rule110_ft_stage16_base.yaml  rule110_ft_stage16_c012.yaml  rule110_ft_stage16to20.yaml  rule110_latent_rollout_only.yaml  rule110_locked_reference.yaml  rule110_tuned_a.yaml  (+48 more)
notebooks/: improve0428.md  latent_visualization.ipynb  quickstart_1d.ipynb
src/: __init__.py
(+113 files in other folders)
