[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-world-model"
version = "0.1.0"
description = "Research codebase for world models and effective dynamics in cellular automata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "torchvision>=0.17",
  "jupyter>=1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
